--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="whale.css">
     </head>
     <body>
-        <script src="jquery-1.11.3.min.js"></script>
-        <script src="whale.js"></script>
+        <script src="jquery-1.11.3.min.js"></script><script src="whale.js"></script>
     </body>
 </html>
