--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="whale.css">
     </head>
     <body>
-      <a href="#hello">hello</a>
+      <a href="#"></a>
         <script src="jquery-1.11.3.min.js"></script>
         <script src="whale.js"></script>
     </body>
